--- a/Drill Namer/Drill Namer.csproj
+++ b/Drill Namer/Drill Namer.csproj
@@ -129,10 +129,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\DRILL NAMER 2.0\DRILLNAMER.cs">
+    <Compile Include="DRILLNAMER.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="..\..\DRILL NAMER 2.0\DRILLNAMER.Designer.cs">
+    <Compile Include="DRILLNAMER.Designer.cs">
       <DependentUpon>DRILLNAMER.cs</DependentUpon>
     </Compile>
     <Compile Include="AutoCADHelper.cs" />
@@ -146,14 +146,12 @@
     <Compile Include="WellsData.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="..\..\DRILL NAMER 2.0\DRILLNAMER.resx">
+    <EmbeddedResource Include="DRILLNAMER.resx">
       <DependentUpon>DRILLNAMER.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\DRILL NAMER 2.0\findreplacecommand.cs">
-      <Link>findreplacecommand.cs</Link>
-    </Compile>
+    <Compile Include="findreplacecommand.cs" />
     <None Include="app.config" />
     <None Include="Drill Namer.dll.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -170,7 +168,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="FodyWeavers.xml" />
-    <Content Include="System.Memory.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.6.8.2\build\Fody.targets" Condition="Exists('..\packages\Fody.6.8.2\build\Fody.targets')" />
