--- a/DrillNamer.Commands/DrillNamer.Commands.csproj
+++ b/DrillNamer.Commands/DrillNamer.Commands.csproj
@@ -17,6 +17,9 @@
     <Reference Include="acdbmgd, Version=24.3.0.0" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DrillNamer.Core\DrillNamer.Core.csproj" />
     <ProjectReference Include="..\DrillNamer.UI\DrillNamer.UI.csproj" />
   </ItemGroup>
