--- a/DrillNamer.Core/DrillNamer.Core.csproj
+++ b/DrillNamer.Core/DrillNamer.Core.csproj
@@ -6,8 +6,11 @@
     <AssemblyName>DrillNamer.Core</AssemblyName>
     <RootNamespace>DrillNamer.Core</RootNamespace>
     <Platforms>x64</Platforms>
-  </PropertyGroup>
+</PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)'=='net48'">
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
