--- a/DrillNamer.UI/DrillNamer.UI.csproj
+++ b/DrillNamer.UI/DrillNamer.UI.csproj
@@ -18,6 +18,9 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\DrillNamer.Core\DrillNamer.Core.csproj" />
   </ItemGroup>
 </Project>
