--- a/tests/DrillNamer.Tests/DrillNamer.Tests.csproj
+++ b/tests/DrillNamer.Tests/DrillNamer.Tests.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0" PrivateAssets="all" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\DrillNamer.Core\DrillNamer.Core.csproj" />
   </ItemGroup>
 </Project>
