--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,4 +3,7 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.10.0" PrivateAssets="all" />
+  </ItemGroup>
 </Project>
