--- a/Drill Namer/packages.config
+++ b/Drill Namer/packages.config
@@ -1,4 +1,5 @@
-﻿<packages>
+﻿<?xml version="1.0" encoding="utf-8"?>
+<packages>
   <package id="Costura.Fody" version="6.0.0" targetFramework="net48" developmentDependency="true" />
   <package id="EPPlus" version="7.6.0" targetFramework="net48" />
   <package id="EPPlus.Interfaces" version="8.0.0" targetFramework="net48" />
