general warning updates and fixes

--- a/Drill Namer.dll.config
+++ b/Drill Namer.dll.config
@@ -1,29 +1,49 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <!-- Redirect all versions from 0.0.0.0 up to 4.9.9.9 to the installed version -->
-        <bindingRedirect oldVersion="0.0.0.0-4.9.9.9" newVersion="4.6.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="EPPlus.Interfaces" publicKeyToken="a694d7f3b0907a61" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="EPPlus.System.Drawing" publicKeyToken="2308d35469c9bac0" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.1.0" newVersion="6.0.1.0" />
-      </dependentAssembly>
-      <!-- Add the binding redirect for System.Text.Encoding.CodePages -->
-      <dependentAssembly>
-        <assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.0.0.2" newVersion="9.0.0.2" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
+	<runtime>
+		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+			<dependentAssembly>
+				<assemblyIdentity
+				  name="System.Memory"
+				  publicKeyToken="cc7b13ffcd2ddd51"
+				  culture="neutral" />
+				<!-- Redirect all versions up through 4.9.9.9 → 4.6.0.0 -->
+				<bindingRedirect oldVersion="0.0.0.0-4.9.9.9" newVersion="4.6.0.0" />
+			</dependentAssembly>
+
+			<dependentAssembly>
+				<assemblyIdentity
+				  name="EPPlus.Interfaces"
+				  publicKeyToken="a694d7f3b0907a61"
+				  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+			</dependentAssembly>
+
+			<dependentAssembly>
+				<assemblyIdentity
+				  name="EPPlus.System.Drawing"
+				  publicKeyToken="2308d35469c9bac0"
+				  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+			</dependentAssembly>
+
+			<!-- UPDATED: unify Unsafe to version 6.0.3.0 -->
+			<dependentAssembly>
+				<assemblyIdentity
+				  name="System.Runtime.CompilerServices.Unsafe"
+				  publicKeyToken="b03f5f7f11d50a3a"
+				  culture="neutral" />
+				<!-- Redirect all versions up through 6.0.3.0 → 6.0.3.0 -->
+				<bindingRedirect oldVersion="0.0.0.0-6.0.3.0" newVersion="6.0.3.0" />
+			</dependentAssembly>
+
+			<dependentAssembly>
+				<assemblyIdentity
+				  name="System.Text.Encoding.CodePages"
+				  publicKeyToken="b03f5f7f11d50a3a"
+				  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-9.0.0.2" newVersion="9.0.0.2" />
+			</dependentAssembly>
+		</assemblyBinding>
+	</runtime>
 </configuration>
