small warning changes

--- a/Drill Namer.dll.config
+++ b/Drill Namer.dll.config
@@ -2,48 +2,72 @@
 <configuration>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+			<!-- ─────────────  BCL helper libraries  ───────────── -->
+
+			<!-- System.Runtime.CompilerServices.Unsafe  assembly v 6.0.3.0 -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Memory"
-				  publicKeyToken="cc7b13ffcd2ddd51"
-				  culture="neutral" />
-				<!-- Redirect all versions up through 4.9.9.9 → 4.6.0.0 -->
-				<bindingRedirect oldVersion="0.0.0.0-4.9.9.9" newVersion="4.6.0.0" />
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe"
+								  publicKeyToken="b03f5f7f11d50a3a"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.1.0.0"
+								 newVersion="6.0.3.0" />
+			</dependentAssembly>
+
+			<!-- System.Buffers  assembly v 4.0.5.0 -->
+			<dependentAssembly>
+				<assemblyIdentity name="System.Buffers"
+								  publicKeyToken="cc7b13ffcd2ddd51"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0"
+								 newVersion="4.0.5.0" />
+			</dependentAssembly>
+
+			<!-- System.Memory  assembly v 4.0.5.0 -->
+			<dependentAssembly>
+				<assemblyIdentity name="System.Memory"
+								  publicKeyToken="cc7b13ffcd2ddd51"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0"
+								 newVersion="4.0.5.0" />
+			</dependentAssembly>
+
+			<!-- System.Numerics.Vectors  assembly v 4.1.6.0 -->
+			<dependentAssembly>
+				<assemblyIdentity name="System.Numerics.Vectors"
+								  publicKeyToken="b03f5f7f11d50a3a"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0"
+								 newVersion="4.1.6.0" />
+			</dependentAssembly>
+
+			<!-- System.Text.Encoding.CodePages  assembly v 9.0.0.2 -->
+			<dependentAssembly>
+				<assemblyIdentity name="System.Text.Encoding.CodePages"
+								  publicKeyToken="b03f5f7f11d50a3a"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-9.0.0.2"
+								 newVersion="9.0.0.2" />
+			</dependentAssembly>
+
+			<!-- ─────────────  EPPlus satellite assemblies  ───────────── -->
+
+			<dependentAssembly>
+				<assemblyIdentity name="EPPlus.Interfaces"
+								  publicKeyToken="a694d7f3b0907a61"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0"
+								 newVersion="8.0.0.0" />
 			</dependentAssembly>
 
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="EPPlus.Interfaces"
-				  publicKeyToken="a694d7f3b0907a61"
-				  culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+				<assemblyIdentity name="EPPlus.System.Drawing"
+								  publicKeyToken="2308d35469c9bac0"
+								  culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0"
+								 newVersion="8.0.0.0" />
 			</dependentAssembly>
 
-			<dependentAssembly>
-				<assemblyIdentity
-				  name="EPPlus.System.Drawing"
-				  publicKeyToken="2308d35469c9bac0"
-				  culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
-			</dependentAssembly>
-
-			<!-- UPDATED: unify Unsafe to version 6.0.3.0 -->
-			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Runtime.CompilerServices.Unsafe"
-				  publicKeyToken="b03f5f7f11d50a3a"
-				  culture="neutral" />
-				<!-- Redirect all versions up through 6.0.3.0 → 6.0.3.0 -->
-				<bindingRedirect oldVersion="0.0.0.0-6.0.3.0" newVersion="6.0.3.0" />
-			</dependentAssembly>
-
-			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Text.Encoding.CodePages"
-				  publicKeyToken="b03f5f7f11d50a3a"
-				  culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-9.0.0.2" newVersion="9.0.0.2" />
-			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
 </configuration>
