--- a/app.config
+++ b/app.config
@@ -5,82 +5,44 @@
 
 			<!-- System.Memory -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Memory"
-				  publicKeyToken="cc7b13ffcd2ddd51"
-				  culture="neutral" />
-				<bindingRedirect
-				  oldVersion="0.0.0.0-4.9.9.9"
-				  newVersion="4.6.0.0" />
+				<assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
 			</dependentAssembly>
 
 			<!-- EPPlus.Interfaces -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="EPPlus.Interfaces"
-				  publicKeyToken="a694d7f3b0907a61"
-				  culture="neutral" />
-				<bindingRedirect
-				  oldVersion="0.0.0.0-8.0.0.0"
-				  newVersion="8.0.0.0" />
+				<assemblyIdentity name="EPPlus.Interfaces" publicKeyToken="a694d7f3b0907a61" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
 			</dependentAssembly>
 
 			<!-- EPPlus.System.Drawing -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="EPPlus.System.Drawing"
-				  publicKeyToken="2308d35469c9bac0"
-				  culture="neutral" />
-				<bindingRedirect
-				  oldVersion="0.0.0.0-8.0.0.0"
-				  newVersion="8.0.0.0" />
+				<assemblyIdentity name="EPPlus.System.Drawing" publicKeyToken="2308d35469c9bac0" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
 			</dependentAssembly>
 
 			<!-- System.Runtime.CompilerServices.Unsafe -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Runtime.CompilerServices.Unsafe"
-				  publicKeyToken="b03f5f7f11d50a3a"
-				  culture="neutral" />
-				<!-- redirect everything up through 6.0.3.0 → 6.0.3.0 -->
-				<bindingRedirect
-				  oldVersion="0.0.0.0-6.0.3.0"
-				  newVersion="6.0.3.0" />
+				<assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-6.1.0.0" newVersion="6.1.0.0" />
 			</dependentAssembly>
 
 			<!-- System.Numerics.Vectors -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Numerics.Vectors"
-				  publicKeyToken="b03f5f7f11d50a3a"
-				  culture="neutral" />
-				<!-- redirect up through 4.1.6.0 → 4.1.6.0 -->
-				<bindingRedirect
-				  oldVersion="0.0.0.0-4.1.6.0"
-				  newVersion="4.1.6.0" />
+				<assemblyIdentity name="System.Numerics.Vectors" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
 			</dependentAssembly>
 
 			<!-- System.Buffers -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Buffers"
-				  publicKeyToken="cc7b13ffcd2ddd51"
-				  culture="neutral" />
-				<!-- redirect up through 4.0.5.0 → 4.0.5.0 -->
-				<bindingRedirect
-				  oldVersion="0.0.0.0-4.0.5.0"
-				  newVersion="4.0.5.0" />
+				<assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-4.6.0.0" newVersion="4.6.0.0" />
 			</dependentAssembly>
 
 			<!-- System.Text.Encoding.CodePages -->
 			<dependentAssembly>
-				<assemblyIdentity
-				  name="System.Text.Encoding.CodePages"
-				  publicKeyToken="b03f5f7f11d50a3a"
-				  culture="neutral" />
-				<bindingRedirect
-				  oldVersion="0.0.0.0-9.0.0.2"
-				  newVersion="9.0.0.2" />
+				<assemblyIdentity name="System.Text.Encoding.CodePages" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+				<bindingRedirect oldVersion="0.0.0.0-9.0.0.2" newVersion="9.0.0.2" />
 			</dependentAssembly>
 
 		</assemblyBinding>
